<resources>
    <string name="app_name">GeekhubGroupList</string>
    <string name="list_view">Listview</string>
    <string name="recycler_view">RecyclerView</string>
    <string name="button">Git</string>
    <string name="wrong_url">Wrong URL</string>
    <string name="user_removed">USER REMOVED</string>
    <string name="undo">UNDO</string>
    <string name="loading">Loading</string>
    <string name="wrong_response">Wrong response. Check all incoming parameters</string>
    <string name="android_developer">Android Developer</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repositories">Repositories</string>
    <string name="unknown_location">Unknown location</string>
    <string name="profile_information">Profile Information</string>
    <string name="geekhub_group">Geekhub Group</string>
    <string name="unknown_path">Unknown URL path. Please check it</string>
    <string name="no_user_in_list">There is no user in this list. Please check your link and try again</string>
    <string name="http">http://</string>
    <string name="https">https://</string>
    <string name="headset_is_unplagged">Headset is unplugged</string>
    <string name="headset_is_plugged">Headset is plugged</string>
    <string name="change_photo">Change Photo</string>
    <string name="contacts">Contacts</string>
    <string name="no_idea">I have no idea what the headset state is</string>
    <string name="add_contact">Add contact</string>
    <string name="enter_your_contact">Enter your contacts</string>
    <string name="call_me">"Call me "</string>
    <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="storage_denied">Storage Permissions denied.</string>
    <string name="search">Search</string>
    <string name="search_hint">Search</string>

    <string-array name="group_list">
        <item>Винник Владислав</item>
        <item>Теплий Михайло</item>
        <item>Рибак Богдан</item>
        <item>Лещенко Иван</item>
        <item>Сакуров Павло</item>
        <item>Воловик Руслан</item>
        <item>Кириченко Дар\'я</item>
        <item>Рябко Андрій</item>
        <item>Ситник Євгеній</item>
        <item>Химич Эдгар</item>
        <item>Бочкарьова Альона</item>
        <item>Мигаль Руслан</item>
        <item>Смалько Ірина</item>
        <item>Губський Валерій</item>
        <item>Жданов Євген</item>
        <item>Сергеенко Иван</item>
        <item>Пахаренко Ігор</item>
        <item>Сторчак Олександр</item>
        <item>Піхманець Микола</item>
        <item>Лимарь Володимир</item>
    </string-array>
</resources>
