<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sea_back"
    tools:context="com.appleeeee.geekhubgrouplist.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textColor="@android:color/black"
            android:text="@string/list_view" />

        <Button
            android:id="@+id/button_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/button_margin_top"
            android:textColor="@android:color/black"
            android:text="@string/recycler_view" />
        
        <Button
            android:id="@+id/button_contact_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/contacts"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</LinearLayout>
